# ts-api-wrapper

./: AGENTS.md  README.md  check.ps1  pyproject.toml
GptPro/: codex_latest_ts_api_wrapper_review.md  codex_ts_api_wrapper_post_pass3_followup.md  codex_ts_api_wrapper_post_pass5_cleanup.md  codex_ts_api_wrapper_review.md  tradestation_only_python_implementation_plan_for_codex.md  ts-api-wrapper-review-pass3.md  ts-api-wrapper-review-pass4.md  ts-api-wrapper-review-pass5.md  ts-api-wrapper-review.md  ts-api-wrapper-review_2nd_pass.md  ts_api_wrapper_second_pass_review.md
docs/: agent-recipes.md  safety-invariants.md  validation.md
specs/tradestation/: openapi.2026-05-09.json
src/tradestation_api_wrapper/: __init__.py  auth.py  builders.py  capabilities.py  client.py  config.py  errors.py  models.py  order_status.py  rate_limit.py  reconciliation.py  redaction.py  rest.py  stream.py  trade.py  transport.py  validation.py
tests/: __init__.py  helpers.py
tests/integration_sim/: test_sim_read_only.py  test_sim_trade_opt_in.py
tests/unit/: test_auth.py  test_builders.py  test_client_features.py  test_config.py  test_errors.py  test_httpx_transport.py  test_models_and_validation.py  test_order_status.py  test_public_api.py  test_rate_limit.py  test_reconciliation.py  test_redaction.py  test_rest_retries.py  test_spec_coverage.py  test_stream_parser.py  test_stream_session.py  test_trade.py
tools/: pin_tradestation_spec.py
